@@ -97,7 +97,6 @@ import com.facebook.buck.rules.DefaultBuildTargetSourcePath;
 import com.facebook.buck.rules.DefaultSourcePathResolver;
 import com.facebook.buck.rules.DefaultTargetNodeToBuildRuleTransformer;
 import com.facebook.buck.rules.FakeSourcePath;
-import com.facebook.buck.rules.PathSourcePath;
 import com.facebook.buck.rules.SingleThreadedBuildRuleResolver;
 import com.facebook.buck.rules.SourcePath;
 import com.facebook.buck.rules.SourcePathResolver;
@@ -223,14 +222,14 @@ public class ProjectGeneratorTest {
 
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .build();
 
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setBinary(libraryTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath(("Info.plist")))
+            .setInfoPlist(FakeSourcePath.of(("Info.plist")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -258,21 +257,20 @@ public class ProjectGeneratorTest {
 
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .build();
 
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setBinary(libraryTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath(("Info.plist")))
+            .setInfoPlist(FakeSourcePath.of(("Info.plist")))
             .build();
 
     TargetNode<?, ?> genruleNode =
         GenruleBuilder.newGenruleBuilder(genruleTarget)
             .setSrcs(
-                ImmutableList.of(
-                    new FakeSourcePath("foo/foo.json"), new FakeSourcePath("bar.json")))
+                ImmutableList.of(FakeSourcePath.of("foo/foo.json"), FakeSourcePath.of("bar.json")))
             .setOut("out")
             .build();
 
@@ -315,17 +313,16 @@ public class ProjectGeneratorTest {
 
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .setExtraXcodeFiles(
-                ImmutableList.of(
-                    new FakeSourcePath("foo/foo.json"), new FakeSourcePath("bar.json")))
+                ImmutableList.of(FakeSourcePath.of("foo/foo.json"), FakeSourcePath.of("bar.json")))
             .build();
 
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setBinary(libraryTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath(("Info.plist")))
+            .setInfoPlist(FakeSourcePath.of(("Info.plist")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -358,16 +355,16 @@ public class ProjectGeneratorTest {
 
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .setExtraXcodeSources(
-                ImmutableList.of(new FakeSourcePath("foo/foo.m"), new FakeSourcePath("bar.m")))
+                ImmutableList.of(FakeSourcePath.of("foo/foo.m"), FakeSourcePath.of("bar.m")))
             .build();
 
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setBinary(libraryTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath(("Info.plist")))
+            .setInfoPlist(FakeSourcePath.of(("Info.plist")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -444,7 +441,7 @@ public class ProjectGeneratorTest {
   }
 
   @Test
-  public void testModularFrameworkHeaderMapInclusionAsDependency() throws IOException {
+  public void testModularLibraryInterfaceMapInclusionAsDependency() throws IOException {
     BuildTarget frameworkBundleTarget =
         BuildTargetFactory.newInstance(rootPath, "//foo", "framework");
     BuildTarget frameworkLibTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
@@ -458,9 +455,9 @@ public class ProjectGeneratorTest {
             .setSrcs(ImmutableSortedSet.of())
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("HeaderGroup1/foo.h"),
-                    new FakeSourcePath("HeaderGroup2/baz.h")))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("HeaderGroup1/bar.h")))
+                    FakeSourcePath.of("HeaderGroup1/foo.h"),
+                    FakeSourcePath.of("HeaderGroup2/baz.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("HeaderGroup1/bar.h")))
             .setConfigs(ImmutableSortedMap.of(configName, ImmutableMap.of()))
             .setModular(true)
             .build();
@@ -468,7 +465,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> frameworkBundleNode =
         AppleBundleBuilder.createBuilder(frameworkBundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(frameworkLibTarget)
             .build();
 
@@ -482,13 +479,14 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> appBundleNode =
         AppleBundleBuilder.createBuilder(appBundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(appBinaryTarget)
             .build();
 
     ProjectGenerator projectGenerator =
         createProjectGeneratorForCombinedProject(
             ImmutableSet.of(frameworkLibNode, frameworkBundleNode, appBinaryNode, appBundleNode),
+            ImmutableSet.of(frameworkBundleNode, appBinaryNode, appBundleNode),
             ImmutableSet.of());
 
     projectGenerator.createXcodeProjects();
@@ -497,14 +495,14 @@ public class ProjectGeneratorTest {
     assertNotNull(project);
 
     List<Path> headerSymlinkTrees = projectGenerator.getGeneratedHeaderSymlinkTrees();
-    assertThat(headerSymlinkTrees, hasSize(8));
+    assertThat(headerSymlinkTrees, hasSize(6));
 
     assertTrue(headerSymlinkTrees.contains(Paths.get("buck-out/gen/_p/CwkbTNOBmb-pub")));
     assertThatHeaderMapWithoutSymLinksIsEmpty(Paths.get("buck-out/gen/_p/CwkbTNOBmb-pub"));
   }
 
   @Test
-  public void testModularFrameworkHeaderMapInclusionInTargetItself() throws IOException {
+  public void testModularLibraryInterfaceInclusionInTargetItself() throws IOException {
     BuildTarget libTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
 
     TargetNode<?, ?> libNode =
@@ -512,9 +510,9 @@ public class ProjectGeneratorTest {
             .setSrcs(ImmutableSortedSet.of())
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("HeaderGroup1/foo.h"),
-                    new FakeSourcePath("HeaderGroup2/baz.h")))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("HeaderGroup1/bar.h")))
+                    FakeSourcePath.of("HeaderGroup1/foo.h"),
+                    FakeSourcePath.of("HeaderGroup2/baz.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("HeaderGroup1/bar.h")))
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
             .setModular(true)
             .build();
@@ -531,7 +529,9 @@ public class ProjectGeneratorTest {
     assertThat(headerSymlinkTrees, hasSize(2));
 
     assertThat(headerSymlinkTrees.get(0).toString(), is(equalTo("buck-out/gen/_p/CwkbTNOBmb-pub")));
-    assertThatHeaderMapWithoutSymLinksIsEmpty(Paths.get("buck-out/gen/_p/CwkbTNOBmb-pub"));
+    assertThatHeaderSymlinkTreeContains(
+        Paths.get("buck-out/gen/_p/CwkbTNOBmb-pub"),
+        ImmutableMap.of("lib/bar.h", "HeaderGroup1/bar.h"));
   }
 
   @Test
@@ -546,9 +546,9 @@ public class ProjectGeneratorTest {
             .setSrcs(ImmutableSortedSet.of())
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("HeaderGroup1/foo.h"),
-                    new FakeSourcePath("HeaderGroup2/baz.h")))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("HeaderGroup1/bar.h")))
+                    FakeSourcePath.of("HeaderGroup1/foo.h"),
+                    FakeSourcePath.of("HeaderGroup2/baz.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("HeaderGroup1/bar.h")))
             .setConfigs(ImmutableSortedMap.of(configName, ImmutableMap.of()))
             .setModular(true)
             .build();
@@ -556,18 +556,20 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> frameworkNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(libTarget)
             .build();
 
     ProjectGenerator projectGenerator =
         createProjectGeneratorForCombinedProject(
-            ImmutableSet.of(libNode, frameworkNode), ImmutableSet.of());
+            ImmutableSet.of(libNode, frameworkNode),
+            ImmutableSet.of(frameworkNode),
+            ImmutableSet.of());
 
     projectGenerator.createXcodeProjects();
 
     PBXProject project = projectGenerator.getGeneratedProject();
-    PBXTarget libPBXTarget = assertTargetExistsAndReturnTarget(project, "//foo:lib");
+    PBXTarget libPBXTarget = assertTargetExistsAndReturnTarget(project, "//foo:framework");
 
     ImmutableMap<String, String> buildSettings =
         getBuildSettings(bundleTarget, libPBXTarget, configName);
@@ -600,17 +602,17 @@ public class ProjectGeneratorTest {
             .setSrcs(ImmutableSortedSet.of())
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("HeaderGroup1/foo.h"),
-                    new FakeSourcePath("HeaderGroup2/baz.h")))
+                    FakeSourcePath.of("HeaderGroup1/foo.h"),
+                    FakeSourcePath.of("HeaderGroup2/baz.h")))
             .setExportedHeaders(
-                ImmutableSortedSet.of(new FakeSourcePath("HeaderGroup1/" + exportedHeaderName)))
+                ImmutableSortedSet.of(FakeSourcePath.of("HeaderGroup1/" + exportedHeaderName)))
             .setModular(true)
             .build();
 
     TargetNode<?, ?> frameworkNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(libTarget)
             .build();
 
@@ -645,9 +647,9 @@ public class ProjectGeneratorTest {
             .setSrcs(ImmutableSortedSet.of())
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("HeaderGroup1/foo.h"),
-                    new FakeSourcePath("HeaderGroup2/baz.h")))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("HeaderGroup1/bar.h")))
+                    FakeSourcePath.of("HeaderGroup1/foo.h"),
+                    FakeSourcePath.of("HeaderGroup2/baz.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("HeaderGroup1/bar.h")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -722,13 +724,15 @@ public class ProjectGeneratorTest {
             .setSrcs(ImmutableSortedSet.of())
             .setHeaders(
                 ImmutableSortedMap.of(
-                    "any/name.h", new FakeSourcePath("HeaderGroup1/foo.h"),
-                    "different/name.h", new FakeSourcePath("HeaderGroup2/baz.h"),
-                    "one/more/name.h", new DefaultBuildTargetSourcePath(privateGeneratedTarget)))
+                    "any/name.h", FakeSourcePath.of("HeaderGroup1/foo.h"),
+                    "different/name.h", FakeSourcePath.of("HeaderGroup2/baz.h"),
+                    "one/more/name.h", DefaultBuildTargetSourcePath.of(privateGeneratedTarget)))
             .setExportedHeaders(
                 ImmutableSortedMap.of(
-                    "yet/another/name.h", new FakeSourcePath("HeaderGroup1/bar.h"),
-                    "and/one/more.h", new DefaultBuildTargetSourcePath(publicGeneratedTarget)))
+                    "yet/another/name.h",
+                    FakeSourcePath.of("HeaderGroup1/bar.h"),
+                    "and/one/more.h",
+                    DefaultBuildTargetSourcePath.of(publicGeneratedTarget)))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -800,10 +804,10 @@ public class ProjectGeneratorTest {
     BuildTarget buildTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
     TargetNode<?, ?> node =
         new CxxLibraryBuilder(buildTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo/dir1/bar.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo/dir1/bar.h")))
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("foo/dir1/foo.h"), new FakeSourcePath("foo/dir2/baz.h")))
+                    FakeSourcePath.of("foo/dir1/foo.h"), FakeSourcePath.of("foo/dir2/baz.h")))
             .setSrcs(ImmutableSortedSet.of())
             .build();
 
@@ -835,10 +839,10 @@ public class ProjectGeneratorTest {
     BuildTarget buildTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
     TargetNode<?, ?> node =
         new CxxLibraryBuilder(buildTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo/dir1/bar.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo/dir1/bar.h")))
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("foo/dir1/foo.h"), new FakeSourcePath("foo/dir2/baz.h")))
+                    FakeSourcePath.of("foo/dir1/foo.h"), FakeSourcePath.of("foo/dir2/baz.h")))
             .setSrcs(ImmutableSortedSet.of())
             .setXcodePublicHeadersSymlinks(false)
             .setXcodePrivateHeadersSymlinks(false)
@@ -874,10 +878,10 @@ public class ProjectGeneratorTest {
     BuildTarget buildTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
     TargetNode<?, ?> node =
         new CxxLibraryBuilder(buildTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo/dir1/bar.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo/dir1/bar.h")))
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("foo/dir1/foo.h"), new FakeSourcePath("foo/dir2/baz.h")))
+                    FakeSourcePath.of("foo/dir1/foo.h"), FakeSourcePath.of("foo/dir2/baz.h")))
             .setSrcs(ImmutableSortedSet.of())
             .setHeaderNamespace("name/space")
             .build();
@@ -920,13 +924,15 @@ public class ProjectGeneratorTest {
         new CxxLibraryBuilder(buildTarget)
             .setExportedHeaders(
                 ImmutableSortedMap.of(
-                    "yet/another/name.h", new FakeSourcePath("foo/dir1/bar.h"),
-                    "and/one/more.h", new DefaultBuildTargetSourcePath(publicGeneratedTarget)))
+                    "yet/another/name.h",
+                    FakeSourcePath.of("foo/dir1/bar.h"),
+                    "and/one/more.h",
+                    DefaultBuildTargetSourcePath.of(publicGeneratedTarget)))
             .setHeaders(
                 ImmutableSortedMap.of(
-                    "any/name.h", new FakeSourcePath("foo/dir1/foo.h"),
-                    "different/name.h", new FakeSourcePath("foo/dir2/baz.h"),
-                    "one/more/name.h", new DefaultBuildTargetSourcePath(privateGeneratedTarget)))
+                    "any/name.h", FakeSourcePath.of("foo/dir1/foo.h"),
+                    "different/name.h", FakeSourcePath.of("foo/dir2/baz.h"),
+                    "one/more/name.h", DefaultBuildTargetSourcePath.of(privateGeneratedTarget)))
             .setSrcs(ImmutableSortedSet.of())
             .build();
 
@@ -971,13 +977,15 @@ public class ProjectGeneratorTest {
         new CxxLibraryBuilder(buildTarget)
             .setExportedHeaders(
                 ImmutableSortedMap.of(
-                    "yet/another/name.h", new FakeSourcePath("foo/dir1/bar.h"),
-                    "and/one/more.h", new DefaultBuildTargetSourcePath(publicGeneratedTarget)))
+                    "yet/another/name.h",
+                    FakeSourcePath.of("foo/dir1/bar.h"),
+                    "and/one/more.h",
+                    DefaultBuildTargetSourcePath.of(publicGeneratedTarget)))
             .setHeaders(
                 ImmutableSortedMap.of(
-                    "any/name.h", new FakeSourcePath("foo/dir1/foo.h"),
-                    "different/name.h", new FakeSourcePath("foo/dir2/baz.h"),
-                    "one/more/name.h", new DefaultBuildTargetSourcePath(privateGeneratedTarget)))
+                    "any/name.h", FakeSourcePath.of("foo/dir1/foo.h"),
+                    "different/name.h", FakeSourcePath.of("foo/dir2/baz.h"),
+                    "one/more/name.h", DefaultBuildTargetSourcePath.of(privateGeneratedTarget)))
             .setSrcs(ImmutableSortedSet.of())
             .setHeaderNamespace("name/space")
             .build();
@@ -1014,7 +1022,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> node =
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setSrcs(ImmutableSortedSet.of())
-            .setHeaders(ImmutableSortedMap.of("key.h", new FakeSourcePath("value.h")))
+            .setHeaders(ImmutableSortedMap.of("key.h", FakeSourcePath.of("value.h")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -1032,7 +1040,7 @@ public class ProjectGeneratorTest {
     node =
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setSrcs(ImmutableSortedSet.of())
-            .setHeaders(ImmutableSortedMap.of("new-key.h", new FakeSourcePath("value.h")))
+            .setHeaders(ImmutableSortedMap.of("new-key.h", FakeSourcePath.of("value.h")))
             .build();
 
     projectGenerator = createProjectGeneratorForCombinedProject(ImmutableSet.of(node));
@@ -1056,7 +1064,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> node =
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setSrcs(ImmutableSortedSet.of())
-            .setHeaders(ImmutableSortedMap.of("key.h", new FakeSourcePath("value.h")))
+            .setHeaders(ImmutableSortedMap.of("key.h", FakeSourcePath.of("value.h")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -1074,7 +1082,7 @@ public class ProjectGeneratorTest {
     node =
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setSrcs(ImmutableSortedSet.of())
-            .setHeaders(ImmutableSortedMap.of("key.h", new FakeSourcePath("new-value.h")))
+            .setHeaders(ImmutableSortedMap.of("key.h", FakeSourcePath.of("new-value.h")))
             .build();
 
     projectGenerator = createProjectGeneratorForCombinedProject(ImmutableSet.of(node));
@@ -1098,15 +1106,15 @@ public class ProjectGeneratorTest {
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo.h"), ImmutableList.of("public")),
-                    SourceWithFlags.of(new FakeSourcePath("bar.h"))))
+                    SourceWithFlags.of(FakeSourcePath.of("foo.h"), ImmutableList.of("public")),
+                    SourceWithFlags.of(FakeSourcePath.of("bar.h"))))
             .setTests(ImmutableSortedSet.of(testTarget))
             .build();
 
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setDeps(ImmutableSortedSet.of(libraryTarget))
             .build();
 
@@ -1147,22 +1155,22 @@ public class ProjectGeneratorTest {
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo.h"), ImmutableList.of("public")),
-                    SourceWithFlags.of(new FakeSourcePath("bar.h"))))
+                    SourceWithFlags.of(FakeSourcePath.of("foo.h"), ImmutableList.of("public")),
+                    SourceWithFlags.of(FakeSourcePath.of("bar.h"))))
             .build();
 
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setBinary(libraryTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setTests(ImmutableSortedSet.of(testTarget))
             .build();
 
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setDeps(ImmutableSortedSet.of(bundleTarget))
             .build();
 
@@ -1204,22 +1212,22 @@ public class ProjectGeneratorTest {
         AppleBinaryBuilder.createBuilder(binaryTarget)
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo.h"), ImmutableList.of("public")),
-                    SourceWithFlags.of(new FakeSourcePath("bar.h"))))
+                    SourceWithFlags.of(FakeSourcePath.of("foo.h"), ImmutableList.of("public")),
+                    SourceWithFlags.of(FakeSourcePath.of("bar.h"))))
             .build();
 
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setBinary(binaryTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setTests(ImmutableSortedSet.of(testTarget))
             .build();
 
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setDeps(ImmutableSortedSet.of(bundleTarget))
             .build();
 
@@ -1255,10 +1263,10 @@ public class ProjectGeneratorTest {
     BuildTarget buildTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
     TargetNode<?, ?> node =
         new CxxLibraryBuilder(buildTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo/dir1/bar.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo/dir1/bar.h")))
             .setHeaders(
                 ImmutableSortedSet.of(
-                    new FakeSourcePath("foo/dir1/foo.h"), new FakeSourcePath("foo/dir2/baz.h")))
+                    FakeSourcePath.of("foo/dir1/foo.h"), FakeSourcePath.of("foo/dir2/baz.h")))
             .setSrcs(ImmutableSortedSet.of())
             .build();
 
@@ -1358,10 +1366,10 @@ public class ProjectGeneratorTest {
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo.m"), ImmutableList.of("-foo")),
-                    SourceWithFlags.of(new FakeSourcePath("bar.m"))))
-            .setExtraXcodeSources(ImmutableList.of(new FakeSourcePath("libsomething.a")))
-            .setHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+                    SourceWithFlags.of(FakeSourcePath.of("foo.m"), ImmutableList.of("-foo")),
+                    SourceWithFlags.of(FakeSourcePath.of("bar.m"))))
+            .setExtraXcodeSources(ImmutableList.of(FakeSourcePath.of("libsomething.a")))
+            .setHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -1399,8 +1407,8 @@ public class ProjectGeneratorTest {
         new HalideLibraryBuilder(compilerTarget)
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("main.cpp")),
-                    SourceWithFlags.of(new FakeSourcePath("filter.cpp"))))
+                    SourceWithFlags.of(FakeSourcePath.of("main.cpp")),
+                    SourceWithFlags.of(FakeSourcePath.of("filter.cpp"))))
             .build();
 
     BuildTarget libTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
@@ -1441,9 +1449,9 @@ public class ProjectGeneratorTest {
         new CxxLibraryBuilder(buildTarget)
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo.cpp"), ImmutableList.of("-foo")),
-                    SourceWithFlags.of(new FakeSourcePath("bar.cpp"))))
-            .setHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+                    SourceWithFlags.of(FakeSourcePath.of("foo.cpp"), ImmutableList.of("-foo")),
+                    SourceWithFlags.of(FakeSourcePath.of("bar.cpp"))))
+            .setHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -1472,7 +1480,7 @@ public class ProjectGeneratorTest {
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
             .setHeaderPathPrefix(Optional.of("MyHeaderPathPrefix"))
-            .setPrefixHeader(Optional.of(new FakeSourcePath("Foo/Foo-Prefix.pch")))
+            .setPrefixHeader(Optional.of(FakeSourcePath.of("Foo/Foo-Prefix.pch")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -1497,14 +1505,14 @@ public class ProjectGeneratorTest {
     BuildTarget pchTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "pch");
     TargetNode<?, ?> pchNode =
         CxxPrecompiledHeaderBuilder.createBuilder(pchTarget)
-            .setSrc(new FakeSourcePath("Foo/Foo-Prefix.pch"))
+            .setSrc(FakeSourcePath.of("Foo/Foo-Prefix.pch"))
             .build();
 
     BuildTarget libraryTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setPrecompiledHeader(Optional.of(new DefaultBuildTargetSourcePath(pchTarget)))
+            .setPrecompiledHeader(Optional.of(DefaultBuildTargetSourcePath.of(pchTarget)))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -1608,6 +1616,8 @@ public class ProjectGeneratorTest {
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
             .setCompilerFlags(ImmutableList.of("-fhello"))
             .setPreprocessorFlags(ImmutableList.of("-fworld"))
+            .setSwiftCompilerFlags(
+                StringWithMacrosUtils.fromStrings(ImmutableList.of("-fhello-swift")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -1622,6 +1632,7 @@ public class ProjectGeneratorTest {
     assertEquals(
         "$(inherited) -Wno-deprecated -Wno-conversion -fhello -fworld",
         settings.get("OTHER_CFLAGS"));
+    assertEquals("$(inherited) -fhello-swift", settings.get("OTHER_SWIFT_FLAGS"));
   }
 
   @Test
@@ -1735,13 +1746,13 @@ public class ProjectGeneratorTest {
     BuildTarget exportFileTarget =
         BuildTargetFactory.newInstance(rootPath, "//foo", "libExported.a");
     TargetNode<?, ?> exportFileNode =
-        new ExportFileBuilder(exportFileTarget).setSrc(new FakeSourcePath("libExported.a")).build();
+        new ExportFileBuilder(exportFileTarget).setSrc(FakeSourcePath.of("libExported.a")).build();
 
     BuildTarget transitiveDepOfGenruleTarget =
         BuildTargetFactory.newInstance(rootPath, "//foo", "libExported2.a");
     TargetNode<?, ?> transitiveDepOfGenruleNode =
         new ExportFileBuilder(transitiveDepOfGenruleTarget)
-            .setSrc(new FakeSourcePath("libExported2.a"))
+            .setSrc(FakeSourcePath.of("libExported2.a"))
             .build();
 
     BuildTarget genruleTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "genrulelib");
@@ -2130,7 +2141,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setConfigs(configs)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("foo.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("foo.m"))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2144,8 +2155,8 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(configs)
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("fooTest.m"))))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("fooTest.m"))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2193,7 +2204,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setConfigs(configs)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("foo.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("foo.m"))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2207,8 +2218,8 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(configs)
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("fooTest.m"))))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("fooTest.m"))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2250,7 +2261,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> libraryDepNode =
         AppleLibraryBuilder.createBuilder(libraryDepTarget)
             .setConfigs(configs)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("foo.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("foo.m"))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2264,7 +2275,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setConfigs(configs)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("foo.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("foo.m"))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2279,8 +2290,8 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(configs)
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("fooTest.m"))))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("fooTest.m"))))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2331,8 +2342,8 @@ public class ProjectGeneratorTest {
     BuildTarget testTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "xctest");
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("fooTest.m"))))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("fooTest.m"))))
             .setDeps(ImmutableSortedSet.of(libraryTarget))
             .build();
 
@@ -2367,7 +2378,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setConfigs(configs)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("HeaderGroup1/bar.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("HeaderGroup1/bar.h")))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2381,8 +2392,8 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(configs)
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("fooTest.m"))))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("fooTest.m"))))
             .setDeps(ImmutableSortedSet.of(libraryTarget))
             .build();
 
@@ -2419,7 +2430,7 @@ public class ProjectGeneratorTest {
     BuildTarget testTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "xctest");
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -2439,7 +2450,7 @@ public class ProjectGeneratorTest {
     BuildTarget depTarget = BuildTargetFactory.newInstance(rootPath, "//dep", "dep");
     TargetNode<?, ?> depNode =
         AppleLibraryBuilder.createBuilder(depTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("e.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("e.m"))))
             .build();
 
     BuildTarget binaryTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "binary");
@@ -2448,9 +2459,9 @@ public class ProjectGeneratorTest {
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo.m"), ImmutableList.of("-foo"))))
-            .setExtraXcodeSources(ImmutableList.of(new FakeSourcePath("libsomething.a")))
-            .setHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+                    SourceWithFlags.of(FakeSourcePath.of("foo.m"), ImmutableList.of("-foo"))))
+            .setExtraXcodeSources(ImmutableList.of(FakeSourcePath.of("libsomething.a")))
+            .setHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .setFrameworks(
                 ImmutableSortedSet.of(
                     FrameworkPath.ofSourceTreePath(
@@ -2502,7 +2513,7 @@ public class ProjectGeneratorTest {
     BuildTarget resourceTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "resource");
     TargetNode<?, ?> resourceNode =
         AppleResourceBuilder.createBuilder(resourceTarget)
-            .setFiles(ImmutableSet.of(new FakeSourcePath("bar.png")))
+            .setFiles(ImmutableSet.of(FakeSourcePath.of("bar.png")))
             .setDirs(ImmutableSet.of())
             .build();
 
@@ -2518,7 +2529,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .setDeps(ImmutableSortedSet.of(scriptTarget))
             .build();
@@ -2555,7 +2566,7 @@ public class ProjectGeneratorTest {
     BuildTarget resourceTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "resource");
     TargetNode<?, ?> resourceNode =
         AppleResourceBuilder.createBuilder(resourceTarget)
-            .setFiles(ImmutableSet.of(new FakeSourcePath("bar.png")))
+            .setFiles(ImmutableSet.of(FakeSourcePath.of("bar.png")))
             .setDirs(ImmutableSet.of())
             .build();
 
@@ -2571,7 +2582,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .setDeps(ImmutableSortedSet.of(scriptTarget))
             .build();
@@ -2615,7 +2626,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> rnLibraryNode =
         IosReactNativeLibraryBuilder.builder(rnLibraryTarget, buckConfig)
             .setBundleName("Apps/Foo/FooBundle.js")
-            .setEntryPath(new PathSourcePath(filesystem, Paths.get("js/FooApp.js")))
+            .setEntryPath(FakeSourcePath.of(filesystem, "js/FooApp.js"))
             .build();
 
     BuildTarget sharedLibraryTarget =
@@ -2628,7 +2639,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .setDeps(ImmutableSortedSet.of(rnLibraryTarget))
             .build();
@@ -2664,7 +2675,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> node =
         AppleBundleBuilder.createBuilder(buildTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .build();
 
@@ -2693,7 +2704,7 @@ public class ProjectGeneratorTest {
         AppleResourceBuilder.createBuilder(resourceTarget)
             .setFiles(ImmutableSet.of())
             .setDirs(ImmutableSet.of())
-            .setVariants(ImmutableSet.of(new FakeSourcePath("Base.lproj/Bar.storyboard")))
+            .setVariants(ImmutableSet.of(FakeSourcePath.of("Base.lproj/Bar.storyboard")))
             .build();
     BuildTarget fooLibraryTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
     TargetNode<?, ?> fooLibraryNode =
@@ -2704,7 +2715,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(fooLibraryTarget)
             .setDeps(ImmutableSortedSet.of(resourceTarget))
             .build();
@@ -2746,7 +2757,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> node =
         AppleBundleBuilder.createBuilder(buildTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .setXcodeProductType(Optional.of("com.facebook.buck.niftyProductType"))
             .build();
@@ -2783,7 +2794,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> node =
         AppleBundleBuilder.createBuilder(buildTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .build();
 
@@ -2829,7 +2840,7 @@ public class ProjectGeneratorTest {
     BuildTarget modelTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "model");
     TargetNode<?, ?> modelNode =
         CoreDataModelBuilder.createBuilder(modelTarget)
-            .setPath(new FakeSourcePath("foo.xcdatamodel").getRelativePath())
+            .setPath(FakeSourcePath.of("foo.xcdatamodel").getRelativePath())
             .build();
     testRuleAddsReference(modelTarget, modelNode, "foo.xcdatamodel");
   }
@@ -2839,7 +2850,7 @@ public class ProjectGeneratorTest {
     BuildTarget target = BuildTargetFactory.newInstance(rootPath, "//foo", "scenekitasset");
     TargetNode<?, ?> node =
         SceneKitAssetsBuilder.createBuilder(target)
-            .setPath(new FakeSourcePath("foo.scnassets").getRelativePath())
+            .setPath(FakeSourcePath.of("foo.scnassets").getRelativePath())
             .build();
     testRuleAddsReference(target, node, "foo.scnassets");
   }
@@ -2851,14 +2862,14 @@ public class ProjectGeneratorTest {
 
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .build();
 
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setBinary(libraryTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath(("Info.plist")))
+            .setInfoPlist(FakeSourcePath.of(("Info.plist")))
             .setInfoPlistSubstitutions(ImmutableMap.of("CODE_SIGN_ENTITLEMENTS", "foo.plist"))
             .build();
 
@@ -2890,7 +2901,7 @@ public class ProjectGeneratorTest {
         AppleBundleBuilder.createBuilder(watchAppTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
             .setXcodeProductType(Optional.of("com.apple.product-type.application.watchapp2"))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(watchAppBinaryTarget)
             .build();
 
@@ -2903,7 +2914,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> hostAppNode =
         AppleBundleBuilder.createBuilder(hostAppTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(hostAppBinaryTarget)
             .setDeps(ImmutableSortedSet.of(watchAppTarget))
             .build();
@@ -2937,9 +2948,9 @@ public class ProjectGeneratorTest {
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo.m"), ImmutableList.of("-foo")),
-                    SourceWithFlags.of(new FakeSourcePath("bar.m"))))
-            .setHeaders(ImmutableSortedSet.of(new FakeSourcePath("foo.h")))
+                    SourceWithFlags.of(FakeSourcePath.of("foo.m"), ImmutableList.of("-foo")),
+                    SourceWithFlags.of(FakeSourcePath.of("bar.m"))))
+            .setHeaders(ImmutableSortedSet.of(FakeSourcePath.of("foo.h")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -2992,7 +3003,7 @@ public class ProjectGeneratorTest {
             rootPath, "//dep", "shared", CxxDescriptionEnhancer.SHARED_FLAVOR);
     TargetNode<?, ?> dependentSharedLibraryNode =
         AppleLibraryBuilder.createBuilder(dependentSharedLibraryTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("empty.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("empty.m"))))
             .setDeps(ImmutableSortedSet.of(dependentStaticLibraryTarget))
             .build();
 
@@ -3008,7 +3019,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(libraryTarget)
             .build();
 
@@ -3038,7 +3049,7 @@ public class ProjectGeneratorTest {
             rootPath, "//dep", "shared", CxxDescriptionEnhancer.SHARED_FLAVOR);
     TargetNode<?, ?> dependentSharedLibraryNode =
         AppleLibraryBuilder.createBuilder(dependentSharedLibraryTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("e.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("e.m"))))
             .setDeps(ImmutableSortedSet.of(dependentStaticLibraryTarget))
             .build();
 
@@ -3047,7 +3058,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> dependentFrameworkNode =
         AppleBundleBuilder.createBuilder(dependentFrameworkTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(dependentSharedLibraryTarget)
             .build();
 
@@ -3063,7 +3074,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(libraryTarget)
             .build();
 
@@ -3097,7 +3108,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> dependentStaticFrameworkNode =
         AppleBundleBuilder.createBuilder(dependentStaticFrameworkTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(dependentStaticLibraryTarget)
             .build();
 
@@ -3114,7 +3125,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> dependentFrameworkNode =
         AppleBundleBuilder.createBuilder(dependentFrameworkTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(dependentSharedLibraryTarget)
             .build();
 
@@ -3123,7 +3134,7 @@ public class ProjectGeneratorTest {
             rootPath, "//foo", "library", CxxDescriptionEnhancer.SHARED_FLAVOR);
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("e.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("e.m"))))
             .setDeps(ImmutableSortedSet.of(dependentFrameworkTarget))
             .build();
 
@@ -3131,7 +3142,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(libraryTarget)
             .build();
 
@@ -3166,7 +3177,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(libraryTarget)
             .build();
 
@@ -3185,8 +3196,8 @@ public class ProjectGeneratorTest {
     BuildTarget resourceTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "res");
     TargetNode<?, ?> resourceNode =
         AppleResourceBuilder.createBuilder(resourceTarget)
-            .setFiles(ImmutableSet.of(new FakeSourcePath("bar.png")))
-            .setDirs(ImmutableSet.of(new FakeSourcePath("foodir")))
+            .setFiles(ImmutableSet.of(FakeSourcePath.of("bar.png")))
+            .setDirs(ImmutableSet.of(FakeSourcePath.of("foodir")))
             .build();
 
     BuildTarget libraryTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
@@ -3206,7 +3217,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(bundleLibraryTarget)
             .build();
 
@@ -3226,7 +3237,7 @@ public class ProjectGeneratorTest {
         BuildTargetFactory.newInstance(rootPath, "//foo", "asset_catalog");
     TargetNode<?, ?> assetCatalogNode =
         AppleAssetCatalogBuilder.createBuilder(assetCatalogTarget)
-            .setDirs(ImmutableSortedSet.of(new FakeSourcePath("AssetCatalog.xcassets")))
+            .setDirs(ImmutableSortedSet.of(FakeSourcePath.of("AssetCatalog.xcassets")))
             .build();
 
     BuildTarget libraryTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
@@ -3246,7 +3257,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(bundleLibraryTarget)
             .build();
 
@@ -3437,7 +3448,7 @@ public class ProjectGeneratorTest {
   public void nonexistentResourceDirectoryShouldThrow() throws IOException {
     ImmutableSet<TargetNode<?, ?>> nodes =
         setupSimpleLibraryWithResources(
-            ImmutableSet.of(), ImmutableSet.of(new FakeSourcePath("nonexistent-directory")));
+            ImmutableSet.of(), ImmutableSet.of(FakeSourcePath.of("nonexistent-directory")));
 
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage(
@@ -3451,7 +3462,7 @@ public class ProjectGeneratorTest {
   public void nonexistentResourceFileShouldThrow() throws IOException {
     ImmutableSet<TargetNode<?, ?>> nodes =
         setupSimpleLibraryWithResources(
-            ImmutableSet.of(new FakeSourcePath("nonexistent-file.png")), ImmutableSet.of());
+            ImmutableSet.of(FakeSourcePath.of("nonexistent-file.png")), ImmutableSet.of());
 
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage(
@@ -3465,7 +3476,7 @@ public class ProjectGeneratorTest {
   public void usingFileAsResourceDirectoryShouldThrow() throws IOException {
     ImmutableSet<TargetNode<?, ?>> nodes =
         setupSimpleLibraryWithResources(
-            ImmutableSet.of(), ImmutableSet.of(new FakeSourcePath("bar.png")));
+            ImmutableSet.of(), ImmutableSet.of(FakeSourcePath.of("bar.png")));
 
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage("bar.png specified in the dirs parameter of //foo:res is not a directory");
@@ -3478,7 +3489,7 @@ public class ProjectGeneratorTest {
   public void usingDirectoryAsResourceFileShouldThrow() throws IOException {
     ImmutableSet<TargetNode<?, ?>> nodes =
         setupSimpleLibraryWithResources(
-            ImmutableSet.of(new FakeSourcePath("foodir")), ImmutableSet.of());
+            ImmutableSet.of(FakeSourcePath.of("foodir")), ImmutableSet.of());
 
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage(
@@ -3491,7 +3502,7 @@ public class ProjectGeneratorTest {
   @Test
   public void usingBuildTargetSourcePathInResourceDirsOrFilesDoesNotThrow() throws IOException {
     BuildTarget buildTarget = BuildTargetFactory.newInstance("//some:rule");
-    SourcePath sourcePath = new DefaultBuildTargetSourcePath(buildTarget);
+    SourcePath sourcePath = DefaultBuildTargetSourcePath.of(buildTarget);
     TargetNode<?, ?> generatingTarget = new ExportFileBuilder(buildTarget).build();
 
     ImmutableSet<TargetNode<?, ?>> nodes =
@@ -3521,17 +3532,17 @@ public class ProjectGeneratorTest {
 
     TargetNode<ExportFileDescriptionArg, ?> source1 =
         new ExportFileBuilder(source1Target)
-            .setSrc(new PathSourcePath(projectFilesystem, Paths.get("Vendor/sources/source1")))
+            .setSrc(FakeSourcePath.of(projectFilesystem, "Vendor/sources/source1"))
             .build();
 
     TargetNode<ExportFileDescriptionArg, ?> source2 =
         new ExportFileBuilder(source2Target)
-            .setSrc(new PathSourcePath(projectFilesystem, Paths.get("Vendor/source2")))
+            .setSrc(FakeSourcePath.of(projectFilesystem, "Vendor/source2"))
             .build();
 
     TargetNode<ExportFileDescriptionArg, ?> source2Ref =
         new ExportFileBuilder(source2RefTarget)
-            .setSrc(new DefaultBuildTargetSourcePath(source2Target))
+            .setSrc(DefaultBuildTargetSourcePath.of(source2Target))
             .build();
 
     TargetNode<ExportFileDescriptionArg, ?> source3 = new ExportFileBuilder(source3Target).build();
@@ -3543,10 +3554,10 @@ public class ProjectGeneratorTest {
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new DefaultBuildTargetSourcePath(source1Target)),
-                    SourceWithFlags.of(new DefaultBuildTargetSourcePath(source2RefTarget)),
-                    SourceWithFlags.of(new DefaultBuildTargetSourcePath(source3Target))))
-            .setPrefixHeader(Optional.of(new DefaultBuildTargetSourcePath(headerTarget)))
+                    SourceWithFlags.of(DefaultBuildTargetSourcePath.of(source1Target)),
+                    SourceWithFlags.of(DefaultBuildTargetSourcePath.of(source2RefTarget)),
+                    SourceWithFlags.of(DefaultBuildTargetSourcePath.of(source3Target))))
+            .setPrefixHeader(Optional.of(DefaultBuildTargetSourcePath.of(headerTarget)))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -3582,7 +3593,7 @@ public class ProjectGeneratorTest {
         AppleBundleBuilder.createBuilder(hostAppTarget)
             .setProductName(Optional.of("TestHostApp"))
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(hostAppBinaryTarget)
             .build();
 
@@ -3590,7 +3601,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setTestHostApp(Optional.of(hostAppTarget))
             .build();
 
@@ -3617,19 +3628,19 @@ public class ProjectGeneratorTest {
     BuildTarget hostOnlyLibTarget = BuildTargetFactory.newInstance(rootPath, "//libs", "HostOnly");
     TargetNode<?, ?> hostOnlyLibNode =
         AppleLibraryBuilder.createBuilder(hostOnlyLibTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("HostOnly.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("HostOnly.m"))))
             .build();
 
     BuildTarget sharedLibTarget = BuildTargetFactory.newInstance(rootPath, "//libs", "Shared");
     TargetNode<?, ?> sharedLibNode =
         AppleLibraryBuilder.createBuilder(sharedLibTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("Shared.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("Shared.m"))))
             .build();
 
     BuildTarget testOnlyLibTarget = BuildTargetFactory.newInstance(rootPath, "//libs", "TestOnly");
     TargetNode<?, ?> testOnlyLibNode =
         AppleLibraryBuilder.createBuilder(testOnlyLibTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("TestOnly.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("TestOnly.m"))))
             .build();
 
     // host app
@@ -3644,7 +3655,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> hostAppNode =
         AppleBundleBuilder.createBuilder(hostAppTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(hostAppBinaryTarget)
             .build();
 
@@ -3653,7 +3664,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setTestHostApp(Optional.of(hostAppTarget))
             .setDeps(ImmutableSortedSet.of(sharedLibTarget, testOnlyLibTarget))
             .build();
@@ -3701,19 +3712,19 @@ public class ProjectGeneratorTest {
     BuildTarget hostOnlyLibTarget = BuildTargetFactory.newInstance(rootPath, "//libs", "HostOnly");
     TargetNode<?, ?> hostOnlyLibNode =
         AppleLibraryBuilder.createBuilder(hostOnlyLibTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("HostOnly.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("HostOnly.m"))))
             .build();
 
     BuildTarget sharedLibTarget = BuildTargetFactory.newInstance(rootPath, "//libs", "Shared");
     TargetNode<?, ?> sharedLibNode =
         AppleLibraryBuilder.createBuilder(sharedLibTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("Shared.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("Shared.m"))))
             .build();
 
     BuildTarget testOnlyLibTarget = BuildTargetFactory.newInstance(rootPath, "//libs", "TestOnly");
     TargetNode<?, ?> testOnlyLibNode =
         AppleLibraryBuilder.createBuilder(testOnlyLibTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("TestOnly.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("TestOnly.m"))))
             .build();
 
     // host app
@@ -3728,7 +3739,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> hostAppNode =
         AppleBundleBuilder.createBuilder(hostAppTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(hostAppBinaryTarget)
             .build();
 
@@ -3738,7 +3749,7 @@ public class ProjectGeneratorTest {
         AppleTestBuilder.createBuilder(testTarget)
             .isUiTest(true)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setTestHostApp(Optional.of(hostAppTarget))
             .setDeps(ImmutableSortedSet.of(sharedLibTarget, testOnlyLibTarget))
             .build();
@@ -3793,7 +3804,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> hostAppNode =
         AppleBundleBuilder.createBuilder(hostAppTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(hostAppBinaryTarget)
             .build();
 
@@ -3801,7 +3812,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setTestHostApp(Optional.of(hostAppTarget))
             .isUiTest(true)
             .build();
@@ -3834,7 +3845,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> hostAppNode =
         AppleBundleBuilder.createBuilder(hostAppTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(hostAppBinaryTarget)
             .build();
 
@@ -3842,7 +3853,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setTestHostApp(Optional.of(hostAppTarget))
             .build();
 
@@ -3874,10 +3885,10 @@ public class ProjectGeneratorTest {
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
             .setSrcs(
                 ImmutableSortedSet.of(
-                    SourceWithFlags.of(new FakeSourcePath("foo1.m")),
-                    SourceWithFlags.of(new FakeSourcePath("foo2.mm")),
-                    SourceWithFlags.of(new FakeSourcePath("foo3.c")),
-                    SourceWithFlags.of(new FakeSourcePath("foo4.cc"))))
+                    SourceWithFlags.of(FakeSourcePath.of("foo1.m")),
+                    SourceWithFlags.of(FakeSourcePath.of("foo2.mm")),
+                    SourceWithFlags.of(FakeSourcePath.of("foo3.c")),
+                    SourceWithFlags.of(FakeSourcePath.of("foo4.cc"))))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -3912,7 +3923,7 @@ public class ProjectGeneratorTest {
     BuildTarget buildTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "lib");
     TargetNode<?, ?> node =
         AppleLibraryBuilder.createBuilder(buildTarget)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("foo.mm"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("foo.mm"))))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -3955,12 +3966,12 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setDeps(ImmutableSortedSet.of(libraryTarget))
             .build();
     TargetNode<?, ?> assetCatalogNode =
         AppleAssetCatalogBuilder.createBuilder(assetCatalogTarget)
-            .setDirs(ImmutableSortedSet.of(new FakeSourcePath("AssetCatalog.xcassets")))
+            .setDirs(ImmutableSortedSet.of(FakeSourcePath.of("AssetCatalog.xcassets")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -4007,7 +4018,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> resourceNode =
         AppleResourceBuilder.createBuilder(resourceTarget)
             .setDirs(ImmutableSet.of())
-            .setFiles(ImmutableSet.of(new DefaultBuildTargetSourcePath(fileTarget)))
+            .setFiles(ImmutableSet.of(DefaultBuildTargetSourcePath.of(fileTarget)))
             .build();
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
@@ -4038,7 +4049,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> directoryNode = new ExportFileBuilder(directoryTarget).build();
     TargetNode<?, ?> resourceNode =
         AppleResourceBuilder.createBuilder(resourceTarget)
-            .setDirs(ImmutableSet.of(new DefaultBuildTargetSourcePath(directoryTarget)))
+            .setDirs(ImmutableSet.of(DefaultBuildTargetSourcePath.of(directoryTarget)))
             .setFiles(ImmutableSet.of())
             .build();
     TargetNode<?, ?> libraryNode =
@@ -4072,7 +4083,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> directoryNode = new ExportFileBuilder(directoryTarget).build();
     TargetNode<?, ?> resourceNode =
         AppleResourceBuilder.createBuilder(resourceTarget)
-            .setDirs(ImmutableSet.of(new DefaultBuildTargetSourcePath(directoryTarget)))
+            .setDirs(ImmutableSet.of(DefaultBuildTargetSourcePath.of(directoryTarget)))
             .setFiles(ImmutableSet.of())
             .build();
     TargetNode<?, ?> libraryNode =
@@ -4105,15 +4116,15 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> libraryNode =
         AppleLibraryBuilder.createBuilder(libraryTarget)
             .setConfigs(configs)
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("foo.m"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("foo.m"))))
             .build();
 
     BuildTarget testTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "xctest");
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(configs)
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("fooTest.m"))))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("fooTest.m"))))
             .setDeps(ImmutableSortedSet.of(libraryTarget))
             .build();
 
@@ -4154,7 +4165,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> framework2Node =
         AppleBundleBuilder.createBuilder(framework2Target)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(framework2BinaryTarget)
             .build();
 
@@ -4173,7 +4184,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> framework1Node =
         AppleBundleBuilder.createBuilder(framework1Target)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(framework1BinaryTarget)
             .setDeps(ImmutableSortedSet.of(framework2Target))
             .build();
@@ -4188,7 +4199,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.BUNDLE))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .setDeps(ImmutableSortedSet.of(framework1Target))
             .build();
@@ -4237,7 +4248,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> framework2Node =
         AppleBundleBuilder.createBuilder(framework2Target)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(framework2BinaryTarget)
             .setProductName(Optional.of("framework_2_override"))
             .build();
@@ -4257,7 +4268,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> framework1Node =
         AppleBundleBuilder.createBuilder(framework1Target)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(framework1BinaryTarget)
             .setDeps(ImmutableSortedSet.of(framework2Target))
             .build();
@@ -4273,7 +4284,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> framework1FlavoredNode =
         AppleBundleBuilder.createBuilder(framework1FlavoredTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(framework1BinaryTarget)
             .setDeps(ImmutableSortedSet.of(framework2Target))
             .build();
@@ -4287,7 +4298,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(sharedLibraryTarget)
             .setDeps(ImmutableSortedSet.of(framework1Target, framework1FlavoredTarget))
             .build();
@@ -4348,11 +4359,11 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> frameworkNode =
         AppleBundleBuilder.createBuilder(frameworkTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.FRAMEWORK))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(frameworkBinaryTarget)
             .build();
     BuildTarget resourceTarget = BuildTargetFactory.newInstance(rootPath, "//foo", "res");
-    SourcePath sourcePath = new DefaultBuildTargetSourcePath(frameworkTarget);
+    SourcePath sourcePath = DefaultBuildTargetSourcePath.of(frameworkTarget);
     TargetNode<?, ?> resourceNode =
         AppleResourceBuilder.createBuilder(resourceTarget)
             .setFiles(ImmutableSet.of())
@@ -4372,7 +4383,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> bundleNode =
         AppleBundleBuilder.createBuilder(bundleTarget)
             .setExtension(Either.ofLeft(AppleBundleExtension.APP))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setBinary(binaryTarget)
             .build();
     ImmutableSet<TargetNode<?, ?>> nodes =
@@ -4407,7 +4418,7 @@ public class ProjectGeneratorTest {
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
             .setSrcs(ImmutableSortedSet.of())
-            .setBridgingHeader(Optional.of(new FakeSourcePath("BridgingHeader/header1.h")))
+            .setBridgingHeader(Optional.of(FakeSourcePath.of("BridgingHeader/header1.h")))
             .build();
 
     ProjectGenerator projectGenerator =
@@ -4479,7 +4490,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> node =
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("Foo.swift"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("Foo.swift"))))
             .setSwiftVersion(Optional.of("3.0"))
             .build();
 
@@ -4506,7 +4517,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> libNode =
         AppleLibraryBuilder.createBuilder(libBuildTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("Foo.swift"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("Foo.swift"))))
             .setSwiftVersion(Optional.of("3.0"))
             .build();
 
@@ -4527,6 +4538,15 @@ public class ProjectGeneratorTest {
     assertThat(
         buildSettings.get("LIBRARY_SEARCH_PATHS"),
         containsString("$DT_TOOLCHAIN_DIR/usr/lib/swift/$PLATFORM_NAME"));
+    assertThat(
+        buildSettings.get("LD_RUNPATH_SEARCH_PATHS[sdk=iphoneos*]"),
+        equalTo("$(inherited) @executable_path/Frameworks @loader_path/Frameworks"));
+    assertThat(
+        buildSettings.get("LD_RUNPATH_SEARCH_PATHS[sdk=iphonesimulator*]"),
+        equalTo("$(inherited) @executable_path/Frameworks @loader_path/Frameworks"));
+    assertThat(
+        buildSettings.get("LD_RUNPATH_SEARCH_PATHS[sdk=macosx*]"),
+        equalTo("$(inherited) @executable_path/../Frameworks @loader_path/../Frameworks"));
   }
 
   @Test
@@ -4535,7 +4555,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> node =
         AppleLibraryBuilder.createBuilder(buildTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("Foo.swift"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("Foo.swift"))))
             .setSwiftVersion(Optional.of("3.0"))
             .setXcodePublicHeadersSymlinks(false)
             .setXcodePrivateHeadersSymlinks(false)
@@ -4582,7 +4602,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> fooNode =
         AppleLibraryBuilder.createBuilder(fooBuildTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("Foo.swift"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("Foo.swift"))))
             .setSwiftVersion(Optional.of("3.0"))
             .setXcodePublicHeadersSymlinks(false)
             .setXcodePrivateHeadersSymlinks(false)
@@ -4590,7 +4610,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> barNode =
         AppleLibraryBuilder.createBuilder(barBuildTarget)
             .setConfigs(ImmutableSortedMap.of("Debug", ImmutableMap.of()))
-            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(new FakeSourcePath("Bar.swift"))))
+            .setSrcs(ImmutableSortedSet.of(SourceWithFlags.of(FakeSourcePath.of("Bar.swift"))))
             .setDeps(ImmutableSortedSet.of(fooBuildTarget))
             .setSwiftVersion(Optional.of("3.0"))
             .setXcodePublicHeadersSymlinks(false)
@@ -4631,7 +4651,7 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> lib1Node =
         AppleLibraryBuilder.createBuilder(lib1Target)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("lib1.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("lib1.h")))
             .setDeps(ImmutableSortedSet.of(lib2Target))
             .setTests(ImmutableSortedSet.of(testTarget))
             .build();
@@ -4639,26 +4659,26 @@ public class ProjectGeneratorTest {
     TargetNode<?, ?> lib2Node =
         AppleLibraryBuilder.createBuilder(lib2Target)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("lib2.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("lib2.h")))
             .build();
 
     TargetNode<?, ?> lib3Node =
         AppleLibraryBuilder.createBuilder(lib3Target)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("lib3.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("lib3.h")))
             .build();
 
     TargetNode<?, ?> testNode =
         AppleTestBuilder.createBuilder(testTarget)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setInfoPlist(new FakeSourcePath("Info.plist"))
+            .setInfoPlist(FakeSourcePath.of("Info.plist"))
             .setDeps(ImmutableSortedSet.of(lib1Target, lib4Target))
             .build();
 
     TargetNode<?, ?> lib4Node =
         AppleLibraryBuilder.createBuilder(lib4Target)
             .setConfigs(ImmutableSortedMap.of("Default", ImmutableMap.of()))
-            .setExportedHeaders(ImmutableSortedSet.of(new FakeSourcePath("lib4.h")))
+            .setExportedHeaders(ImmutableSortedSet.of(FakeSourcePath.of("lib4.h")))
             .build();
 
     final TargetGraph targetGraph =
@@ -4781,26 +4801,50 @@ public class ProjectGeneratorTest {
   }
 
   private ProjectGenerator createProjectGeneratorForCombinedProject(
-      Collection<TargetNode<?, ?>> nodes) {
-    return createProjectGeneratorForCombinedProject(nodes, ImmutableSet.of());
+      Collection<TargetNode<?, ?>> allNodes) {
+    return createProjectGeneratorForCombinedProject(allNodes, allNodes, ImmutableSet.of());
   }
 
   private ProjectGenerator createProjectGeneratorForCombinedProject(
-      Collection<TargetNode<?, ?>> nodes,
+      Collection<TargetNode<?, ?>> allNodes,
+      Collection<TargetNode<?, ?>> initialTargetNodes,
       ImmutableSet<ProjectGenerator.Option> projectGeneratorOptions) {
-    final TargetGraph targetGraph = TargetGraphFactory.newInstance(ImmutableSet.copyOf(nodes));
+    final TargetGraph targetGraph = TargetGraphFactory.newInstance(ImmutableSet.copyOf(allNodes));
     return createProjectGeneratorForCombinedProject(
-        nodes, projectGeneratorOptions, getBuildRuleResolverNodeFunction(targetGraph));
+        allNodes,
+        initialTargetNodes,
+        projectGeneratorOptions,
+        getBuildRuleResolverNodeFunction(targetGraph));
   }
 
   private ProjectGenerator createProjectGeneratorForCombinedProject(
-      Collection<TargetNode<?, ?>> nodes,
+      Collection<TargetNode<?, ?>> allNodes,
+      ImmutableSet<ProjectGenerator.Option> projectGeneratorOptions) {
+    final TargetGraph targetGraph = TargetGraphFactory.newInstance(ImmutableSet.copyOf(allNodes));
+    return createProjectGeneratorForCombinedProject(
+        allNodes, allNodes, projectGeneratorOptions, getBuildRuleResolverNodeFunction(targetGraph));
+  }
+
+  private ProjectGenerator createProjectGeneratorForCombinedProject(
+      Collection<TargetNode<?, ?>> allNodes,
+      ImmutableSet<ProjectGenerator.Option> projectGeneratorOptions,
+      Function<? super TargetNode<?, ?>, BuildRuleResolver> buildRuleResolverForNode) {
+    return createProjectGeneratorForCombinedProject(
+        allNodes, allNodes, projectGeneratorOptions, buildRuleResolverForNode);
+  }
+
+  private ProjectGenerator createProjectGeneratorForCombinedProject(
+      Collection<TargetNode<?, ?>> allNodes,
+      Collection<TargetNode<?, ?>> initialTargetNodes,
       ImmutableSet<ProjectGenerator.Option> projectGeneratorOptions,
       Function<? super TargetNode<?, ?>, BuildRuleResolver> buildRuleResolverForNode) {
     ImmutableSet<BuildTarget> initialBuildTargets =
-        nodes.stream().map(TargetNode::getBuildTarget).collect(MoreCollectors.toImmutableSet());
+        initialTargetNodes
+            .stream()
+            .map(TargetNode::getBuildTarget)
+            .collect(MoreCollectors.toImmutableSet());
 
-    final TargetGraph targetGraph = TargetGraphFactory.newInstance(ImmutableSet.copyOf(nodes));
+    final TargetGraph targetGraph = TargetGraphFactory.newInstance(ImmutableSet.copyOf(allNodes));
     final AppleDependenciesCache cache = new AppleDependenciesCache(targetGraph);
     final ProjectGenerationStateCache projStateCache = new ProjectGenerationStateCache();
     return new ProjectGenerator(
