@@ -1485,7 +1485,7 @@ public class CachingBuildEngineTest {
 
             @Override
             public SourcePath getSourcePathToOutput() {
-              return new ExplicitBuildTargetSourcePath(getBuildTarget(), output);
+              return ExplicitBuildTargetSourcePath.of(getBuildTarget(), output);
             }
           };
 
@@ -1685,7 +1685,7 @@ public class CachingBuildEngineTest {
 
             @Override
             public SourcePath getSourcePathToOutput() {
-              return new ExplicitBuildTargetSourcePath(getBuildTarget(), output);
+              return ExplicitBuildTargetSourcePath.of(getBuildTarget(), output);
             }
           };
       resolver.addToIndex(rule);
@@ -1763,7 +1763,7 @@ public class CachingBuildEngineTest {
 
       @Override
       public SourcePath getSourcePathToOutput() {
-        return new ExplicitBuildTargetSourcePath(getBuildTarget(), Paths.get("output"));
+        return ExplicitBuildTargetSourcePath.of(getBuildTarget(), Paths.get("output"));
       }
     }
   }
@@ -1825,12 +1825,12 @@ public class CachingBuildEngineTest {
             @Override
             public ImmutableList<SourcePath> getInputsAfterBuildingLocally(
                 BuildContext context, CellPathResolver cellPathResolver) {
-              return ImmutableList.of(new PathSourcePath(filesystem, input));
+              return ImmutableList.of(PathSourcePath.of(filesystem, input));
             }
 
             @Override
             public SourcePath getSourcePathToOutput() {
-              return new ExplicitBuildTargetSourcePath(getBuildTarget(), output);
+              return ExplicitBuildTargetSourcePath.of(getBuildTarget(), output);
             }
           };
 
@@ -1919,12 +1919,12 @@ public class CachingBuildEngineTest {
             @Override
             public ImmutableList<SourcePath> getInputsAfterBuildingLocally(
                 BuildContext context, CellPathResolver cellPathResolver) {
-              return ImmutableList.of(new PathSourcePath(filesystem, input));
+              return ImmutableList.of(PathSourcePath.of(filesystem, input));
             }
 
             @Override
             public SourcePath getSourcePathToOutput() {
-              return new ExplicitBuildTargetSourcePath(getBuildTarget(), output);
+              return ExplicitBuildTargetSourcePath.of(getBuildTarget(), output);
             }
           };
 
@@ -1995,12 +1995,12 @@ public class CachingBuildEngineTest {
             @Override
             public ImmutableList<SourcePath> getInputsAfterBuildingLocally(
                 BuildContext context, CellPathResolver cellPathResolver) {
-              return ImmutableList.of(new PathSourcePath(filesystem, input));
+              return ImmutableList.of(PathSourcePath.of(filesystem, input));
             }
 
             @Override
             public SourcePath getSourcePathToOutput() {
-              return new ExplicitBuildTargetSourcePath(getBuildTarget(), output);
+              return ExplicitBuildTargetSourcePath.of(getBuildTarget(), output);
             }
           };
 
@@ -2048,7 +2048,7 @@ public class CachingBuildEngineTest {
       final ImmutableSet<SourcePath> inputsBefore = ImmutableSet.of();
       DepFileBuildRule rule =
           new DepFileBuildRule(target, filesystem, params) {
-            @AddToRuleKey private final SourcePath path = new PathSourcePath(filesystem, inputFile);
+            @AddToRuleKey private final SourcePath path = PathSourcePath.of(filesystem, inputFile);
 
             @Override
             public ImmutableList<Step> getBuildSteps(
@@ -2078,7 +2078,7 @@ public class CachingBuildEngineTest {
 
             @Override
             public SourcePath getSourcePathToOutput() {
-              return new ExplicitBuildTargetSourcePath(getBuildTarget(), output);
+              return ExplicitBuildTargetSourcePath.of(getBuildTarget(), output);
             }
           };
 
@@ -2171,7 +2171,7 @@ public class CachingBuildEngineTest {
 
             @Override
             public SourcePath getSourcePathToOutput() {
-              return new ExplicitBuildTargetSourcePath(getBuildTarget(), output);
+              return ExplicitBuildTargetSourcePath.of(getBuildTarget(), output);
             }
           };
 
@@ -2261,7 +2261,7 @@ public class CachingBuildEngineTest {
 
             @Override
             public SourcePath getSourcePathToOutput() {
-              return new ExplicitBuildTargetSourcePath(getBuildTarget(), output);
+              return ExplicitBuildTargetSourcePath.of(getBuildTarget(), output);
             }
           };
 
@@ -2357,8 +2357,7 @@ public class CachingBuildEngineTest {
           new DepFileBuildRule(target, filesystem, params) {
             @AddToRuleKey private final SourcePath path = genrule.getSourcePathToOutput();
 
-            @AddToRuleKey
-            private final SourcePath otherDep = new PathSourcePath(filesystem, input2);
+            @AddToRuleKey private final SourcePath otherDep = PathSourcePath.of(filesystem, input2);
 
             @Override
             public ImmutableList<Step> getBuildSteps(
@@ -2387,7 +2386,7 @@ public class CachingBuildEngineTest {
 
             @Override
             public SourcePath getSourcePathToOutput() {
-              return new ExplicitBuildTargetSourcePath(getBuildTarget(), output);
+              return ExplicitBuildTargetSourcePath.of(getBuildTarget(), output);
             }
           };
 
@@ -2488,12 +2487,12 @@ public class CachingBuildEngineTest {
             @Override
             public ImmutableList<SourcePath> getInputsAfterBuildingLocally(
                 BuildContext context, CellPathResolver cellPathResolver) {
-              return ImmutableList.of(new PathSourcePath(filesystem, input));
+              return ImmutableList.of(PathSourcePath.of(filesystem, input));
             }
 
             @Override
             public SourcePath getSourcePathToOutput() {
-              return new ExplicitBuildTargetSourcePath(getBuildTarget(), output);
+              return ExplicitBuildTargetSourcePath.of(getBuildTarget(), output);
             }
           };
 
@@ -2612,12 +2611,12 @@ public class CachingBuildEngineTest {
             @Override
             public ImmutableList<SourcePath> getInputsAfterBuildingLocally(
                 BuildContext context, CellPathResolver cellPathResolver) {
-              return ImmutableList.of(new PathSourcePath(filesystem, input));
+              return ImmutableList.of(PathSourcePath.of(filesystem, input));
             }
 
             @Override
             public SourcePath getSourcePathToOutput() {
-              return new ExplicitBuildTargetSourcePath(getBuildTarget(), output);
+              return ExplicitBuildTargetSourcePath.of(getBuildTarget(), output);
             }
           };
 
@@ -2694,7 +2693,7 @@ public class CachingBuildEngineTest {
       BuildTarget target = BuildTargetFactory.newInstance("//:rule");
       BuildRuleParams params = TestBuildRuleParams.create();
       final SourcePath input =
-          new PathSourcePath(filesystem, filesystem.getRootPath().getFileSystem().getPath("input"));
+          PathSourcePath.of(filesystem, filesystem.getRootPath().getFileSystem().getPath("input"));
       filesystem.touch(pathResolver.getRelativePath(input));
       final Path output = Paths.get("output");
       DepFileBuildRule rule =
@@ -2728,7 +2727,7 @@ public class CachingBuildEngineTest {
 
             @Override
             public SourcePath getSourcePathToOutput() {
-              return new ExplicitBuildTargetSourcePath(getBuildTarget(), output);
+              return ExplicitBuildTargetSourcePath.of(getBuildTarget(), output);
             }
           };
 
@@ -2838,7 +2837,7 @@ public class CachingBuildEngineTest {
       BuildTarget target = BuildTargetFactory.newInstance("//:rule");
       BuildRuleParams params = TestBuildRuleParams.create();
       final SourcePath input =
-          new PathSourcePath(filesystem, filesystem.getRootPath().getFileSystem().getPath("input"));
+          PathSourcePath.of(filesystem, filesystem.getRootPath().getFileSystem().getPath("input"));
       filesystem.touch(pathResolver.getRelativePath(input));
       final Path output = Paths.get("output");
       DepFileBuildRule rule =
@@ -2872,7 +2871,7 @@ public class CachingBuildEngineTest {
 
             @Override
             public SourcePath getSourcePathToOutput() {
-              return new ExplicitBuildTargetSourcePath(getBuildTarget(), output);
+              return ExplicitBuildTargetSourcePath.of(getBuildTarget(), output);
             }
           };
 
@@ -3682,8 +3681,8 @@ public class CachingBuildEngineTest {
 
     @Before
     public void setUpChild() throws Exception {
-      depfileInput = new PathSourcePath(filesystem, Paths.get("path/in/depfile"));
-      nonDepfileInput = new PathSourcePath(filesystem, Paths.get("path/not/in/depfile"));
+      depfileInput = FakeSourcePath.of(filesystem, "path/in/depfile");
+      nonDepfileInput = FakeSourcePath.of(filesystem, "path/not/in/depfile");
       dependency =
           new NoopBuildRuleWithValueAddedToRuleKey(
               BUILD_TARGET.withFlavors(InternalFlavor.of("noop")), filesystem);
@@ -3868,7 +3867,7 @@ public class CachingBuildEngineTest {
       if (pathToOutputFile == null) {
         return null;
       }
-      return new ExplicitBuildTargetSourcePath(getBuildTarget(), pathToOutputFile);
+      return ExplicitBuildTargetSourcePath.of(getBuildTarget(), pathToOutputFile);
     }
 
     @Override
@@ -4062,7 +4061,7 @@ public class CachingBuildEngineTest {
       if (output == null) {
         return null;
       }
-      return new ExplicitBuildTargetSourcePath(getBuildTarget(), output);
+      return ExplicitBuildTargetSourcePath.of(getBuildTarget(), output);
     }
   }
 
