@@ -54,7 +54,7 @@ public class SourcePathResolverTest {
                 new SingleThreadedBuildRuleResolver(
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     Path expectedPath = Paths.get("foo");
-    SourcePath sourcePath = new PathSourcePath(projectFilesystem, expectedPath);
+    SourcePath sourcePath = PathSourcePath.of(projectFilesystem, expectedPath);
 
     assertEquals(expectedPath, pathResolver.getRelativePath(sourcePath));
   }
@@ -70,7 +70,7 @@ public class SourcePathResolverTest {
     BuildTarget buildTarget = BuildTargetFactory.newInstance("//:foo");
     BuildRule rule = new PathReferenceRule(buildTarget, new FakeProjectFilesystem(), expectedPath);
     resolver.addToIndex(rule);
-    SourcePath sourcePath = new DefaultBuildTargetSourcePath(rule.getBuildTarget());
+    SourcePath sourcePath = DefaultBuildTargetSourcePath.of(rule.getBuildTarget());
 
     assertEquals(expectedPath, pathResolver.getRelativePath(sourcePath));
   }
@@ -86,7 +86,7 @@ public class SourcePathResolverTest {
     FakeBuildRule rule = new FakeBuildRule("//:foo");
     rule.setOutputFile("notfoo");
     resolver.addToIndex(rule);
-    SourcePath sourcePath = new ExplicitBuildTargetSourcePath(rule.getBuildTarget(), expectedPath);
+    SourcePath sourcePath = ExplicitBuildTargetSourcePath.of(rule.getBuildTarget(), expectedPath);
 
     assertEquals(expectedPath, pathResolver.getRelativePath(sourcePath));
   }
@@ -100,7 +100,7 @@ public class SourcePathResolverTest {
     FakeBuildRule rule = new FakeBuildRule("//:foo");
     rule.setOutputFile("foo");
     resolver.addToIndex(rule);
-    SourcePath sourcePath = new DefaultBuildTargetSourcePath(rule.getBuildTarget());
+    SourcePath sourcePath = DefaultBuildTargetSourcePath.of(rule.getBuildTarget());
 
     assertEquals(Optional.of(rule), ruleFinder.getRule(sourcePath));
   }
@@ -112,7 +112,7 @@ public class SourcePathResolverTest {
         new SourcePathRuleFinder(
             new SingleThreadedBuildRuleResolver(
                 TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
-    SourcePath sourcePath = new PathSourcePath(projectFilesystem, Paths.get("foo"));
+    SourcePath sourcePath = PathSourcePath.of(projectFilesystem, Paths.get("foo"));
 
     assertEquals(Optional.empty(), ruleFinder.getRule(sourcePath));
   }
@@ -126,7 +126,7 @@ public class SourcePathResolverTest {
                 new SingleThreadedBuildRuleResolver(
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     Path expectedPath = Paths.get("foo");
-    SourcePath sourcePath = new PathSourcePath(projectFilesystem, expectedPath);
+    SourcePath sourcePath = PathSourcePath.of(projectFilesystem, expectedPath);
 
     assertEquals(expectedPath, pathResolver.getRelativePath(sourcePath));
   }
@@ -141,7 +141,7 @@ public class SourcePathResolverTest {
     FakeBuildRule rule = new FakeBuildRule("//:foo");
     rule.setOutputFile("foo");
     resolver.addToIndex(rule);
-    SourcePath sourcePath = new DefaultBuildTargetSourcePath(rule.getBuildTarget());
+    SourcePath sourcePath = DefaultBuildTargetSourcePath.of(rule.getBuildTarget());
 
     assertEquals(rule.getOutputFile(), pathResolver.getRelativePath(sourcePath));
   }
@@ -171,11 +171,11 @@ public class SourcePathResolverTest {
 
     Iterable<? extends SourcePath> sourcePaths =
         ImmutableList.of(
-            new FakeSourcePath("java/com/facebook/Main.java"),
-            new FakeSourcePath("java/com/facebook/BuckConfig.java"),
-            new DefaultBuildTargetSourcePath(rule.getBuildTarget()),
-            new ExplicitBuildTargetSourcePath(rule.getBuildTarget(), Paths.get("foo")),
-            new ForwardingBuildTargetSourcePath(rule.getBuildTarget(), new FakeSourcePath("bar")));
+            FakeSourcePath.of("java/com/facebook/Main.java"),
+            FakeSourcePath.of("java/com/facebook/BuckConfig.java"),
+            DefaultBuildTargetSourcePath.of(rule.getBuildTarget()),
+            ExplicitBuildTargetSourcePath.of(rule.getBuildTarget(), Paths.get("foo")),
+            ForwardingBuildTargetSourcePath.of(rule.getBuildTarget(), FakeSourcePath.of("bar")));
     Iterable<Path> inputs = pathResolver.filterInputsToCompareToOutput(sourcePaths);
     MoreAsserts.assertIterablesEquals(
         "Iteration order should be preserved: results should not be alpha-sorted.",
@@ -201,11 +201,11 @@ public class SourcePathResolverTest {
 
     Iterable<? extends SourcePath> sourcePaths =
         ImmutableList.of(
-            new FakeSourcePath("java/com/facebook/Main.java"),
-            new DefaultBuildTargetSourcePath(rule.getBuildTarget()),
-            new FakeSourcePath("java/com/facebook/BuckConfig.java"),
-            new ExplicitBuildTargetSourcePath(rule2.getBuildTarget(), Paths.get("foo")),
-            new ForwardingBuildTargetSourcePath(rule3.getBuildTarget(), new FakeSourcePath("bar")));
+            FakeSourcePath.of("java/com/facebook/Main.java"),
+            DefaultBuildTargetSourcePath.of(rule.getBuildTarget()),
+            FakeSourcePath.of("java/com/facebook/BuckConfig.java"),
+            ExplicitBuildTargetSourcePath.of(rule2.getBuildTarget(), Paths.get("foo")),
+            ForwardingBuildTargetSourcePath.of(rule3.getBuildTarget(), FakeSourcePath.of("bar")));
     Iterable<BuildRule> inputs = ruleFinder.filterBuildRuleInputs(sourcePaths);
     MoreAsserts.assertIterablesEquals(
         "Iteration order should be preserved: results should not be alpha-sorted.",
@@ -216,11 +216,11 @@ public class SourcePathResolverTest {
   @Test
   public void getSourcePathNameOnPathSourcePath() {
     ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
-    Path path = Paths.get("hello/world.txt");
+    String path = Paths.get("hello/world.txt").toString();
 
     // Test that constructing a PathSourcePath without an explicit name resolves to the
     // string representation of the path.
-    PathSourcePath pathSourcePath1 = new PathSourcePath(projectFilesystem, path);
+    PathSourcePath pathSourcePath1 = FakeSourcePath.of(projectFilesystem, path);
     SourcePathResolver resolver =
         DefaultSourcePathResolver.from(
             new SourcePathRuleFinder(
@@ -228,7 +228,7 @@ public class SourcePathResolverTest {
                     TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
     String actual1 =
         resolver.getSourcePathName(BuildTargetFactory.newInstance("//:test"), pathSourcePath1);
-    assertEquals(path.toString(), actual1);
+    assertEquals(path, actual1);
   }
 
   @Test
@@ -247,7 +247,7 @@ public class SourcePathResolverTest {
             .setOut(out)
             .build(resolver);
     DefaultBuildTargetSourcePath buildTargetSourcePath1 =
-        new DefaultBuildTargetSourcePath(genrule.getBuildTarget());
+        DefaultBuildTargetSourcePath.of(genrule.getBuildTarget());
     String actual1 =
         pathResolver.getSourcePathName(
             BuildTargetFactory.newInstance("//:test"), buildTargetSourcePath1);
@@ -260,7 +260,7 @@ public class SourcePathResolverTest {
             fakeBuildTarget, new FakeProjectFilesystem(), TestBuildRuleParams.create());
     resolver.addToIndex(fakeBuildRule);
     DefaultBuildTargetSourcePath buildTargetSourcePath2 =
-        new DefaultBuildTargetSourcePath(fakeBuildRule.getBuildTarget());
+        DefaultBuildTargetSourcePath.of(fakeBuildRule.getBuildTarget());
     String actual2 =
         pathResolver.getSourcePathName(
             BuildTargetFactory.newInstance("//:test"), buildTargetSourcePath2);
@@ -283,7 +283,7 @@ public class SourcePathResolverTest {
             .setOut(out)
             .build(resolver);
     ExplicitBuildTargetSourcePath buildTargetSourcePath1 =
-        new ExplicitBuildTargetSourcePath(genrule.getBuildTarget(), Paths.get("foo"));
+        ExplicitBuildTargetSourcePath.of(genrule.getBuildTarget(), Paths.get("foo"));
     String actual1 =
         pathResolver.getSourcePathName(
             BuildTargetFactory.newInstance("//:test"), buildTargetSourcePath1);
@@ -295,7 +295,7 @@ public class SourcePathResolverTest {
             fakeBuildTarget, new FakeProjectFilesystem(), TestBuildRuleParams.create());
     resolver.addToIndex(fakeBuildRule);
     ExplicitBuildTargetSourcePath buildTargetSourcePath2 =
-        new ExplicitBuildTargetSourcePath(
+        ExplicitBuildTargetSourcePath.of(
             fakeBuildRule.getBuildTarget(),
             fakeBuildRule.getBuildTarget().getBasePath().resolve("foo/bar"));
     String actual2 =
@@ -309,7 +309,7 @@ public class SourcePathResolverTest {
             otherFakeBuildTarget, new FakeProjectFilesystem(), TestBuildRuleParams.create());
     resolver.addToIndex(otherFakeBuildRule);
     ExplicitBuildTargetSourcePath buildTargetSourcePath3 =
-        new ExplicitBuildTargetSourcePath(
+        ExplicitBuildTargetSourcePath.of(
             otherFakeBuildRule.getBuildTarget(), Paths.get("buck-out/gen/package/foo/bar"));
     String actual3 =
         pathResolver.getSourcePathName(
@@ -336,14 +336,14 @@ public class SourcePathResolverTest {
             .setOut(out)
             .build(resolver);
     ForwardingBuildTargetSourcePath buildTargetSourcePath1 =
-        new ForwardingBuildTargetSourcePath(rule.getBuildTarget(), genrule.getSourcePathToOutput());
+        ForwardingBuildTargetSourcePath.of(rule.getBuildTarget(), genrule.getSourcePathToOutput());
     String actual1 =
         pathResolver.getSourcePathName(
             BuildTargetFactory.newInstance("//:test"), buildTargetSourcePath1);
     assertEquals(out, actual1);
 
     ForwardingBuildTargetSourcePath buildTargetSourcePath2 =
-        new ForwardingBuildTargetSourcePath(rule.getBuildTarget(), new FakeSourcePath("foo/bar"));
+        ForwardingBuildTargetSourcePath.of(rule.getBuildTarget(), FakeSourcePath.of("foo/bar"));
     String actual2 =
         pathResolver.getSourcePathName(
             BuildTargetFactory.newInstance("//:test"), buildTargetSourcePath2);
@@ -355,7 +355,7 @@ public class SourcePathResolverTest {
             otherFakeBuildTarget, new FakeProjectFilesystem(), TestBuildRuleParams.create());
     resolver.addToIndex(otherFakeBuildRule);
     ForwardingBuildTargetSourcePath buildTargetSourcePath3 =
-        new ForwardingBuildTargetSourcePath(
+        ForwardingBuildTargetSourcePath.of(
             otherFakeBuildRule.getBuildTarget(), buildTargetSourcePath2);
     String actual3 =
         pathResolver.getSourcePathName(
@@ -389,8 +389,8 @@ public class SourcePathResolverTest {
     ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
     BuildTarget target = BuildTargetFactory.newInstance("//:test");
     String parameter = "srcs";
-    PathSourcePath pathSourcePath1 = new PathSourcePath(projectFilesystem, Paths.get("same_name"));
-    PathSourcePath pathSourcePath2 = new PathSourcePath(projectFilesystem, Paths.get("same_name"));
+    PathSourcePath pathSourcePath1 = FakeSourcePath.of(projectFilesystem, "same_name");
+    PathSourcePath pathSourcePath2 = FakeSourcePath.of(projectFilesystem, "same_name");
 
     // Try to resolve these source paths, with the same name, together and verify that an
     // exception is thrown.
@@ -420,7 +420,7 @@ public class SourcePathResolverTest {
     assertThat(
         pathResolver.getSourcePathName(
             rule.getBuildTarget(),
-            new ExplicitBuildTargetSourcePath(
+            ExplicitBuildTargetSourcePath.of(
                 rule.getBuildTarget(),
                 filesystem.getBuckPaths().getGenDir().resolve("foo").resolve("something.cpp"))),
         Matchers.equalTo("something.cpp"));
@@ -436,11 +436,11 @@ public class SourcePathResolverTest {
         DefaultSourcePathResolver.from(new SourcePathRuleFinder(resolver));
     BuildRule rule = resolver.addToIndex(new FakeBuildRule("//foo:bar"));
     SourcePath sourcePath1 =
-        new ExplicitBuildTargetSourcePath(
+        ExplicitBuildTargetSourcePath.of(
             rule.getBuildTarget(),
             filesystem.getBuckPaths().getGenDir().resolve("foo").resolve("name1"));
     SourcePath sourcePath2 =
-        new ExplicitBuildTargetSourcePath(
+        ExplicitBuildTargetSourcePath.of(
             rule.getBuildTarget(),
             filesystem.getBuckPaths().getGenDir().resolve("foo").resolve("name2"));
     pathResolver.getSourcePathNames(
@@ -456,7 +456,8 @@ public class SourcePathResolverTest {
         DefaultSourcePathResolver.from(new SourcePathRuleFinder(resolver));
 
     PathSourcePath path =
-        new PathSourcePath(new FakeProjectFilesystem(), Paths.get("cheese").toAbsolutePath());
+        FakeSourcePath.of(
+            new FakeProjectFilesystem(), Paths.get("cheese").toAbsolutePath().toString());
 
     pathResolver.getRelativePath(path);
   }
@@ -473,7 +474,7 @@ public class SourcePathResolverTest {
     BuildRule rule = resolver.addToIndex(new FakeBuildRule("//foo:bar"));
     Path archivePath = filesystem.getBuckPaths().getGenDir().resolve("foo.jar");
     SourcePath archiveSourcePath =
-        new ExplicitBuildTargetSourcePath(rule.getBuildTarget(), archivePath);
+        ExplicitBuildTargetSourcePath.of(rule.getBuildTarget(), archivePath);
     Path memberPath = Paths.get("foo.class");
 
     ArchiveMemberSourcePath path = ArchiveMemberSourcePath.of(archiveSourcePath, memberPath);
@@ -498,7 +499,7 @@ public class SourcePathResolverTest {
     Path archivePath = filesystem.getBuckPaths().getGenDir().resolve("foo.jar");
     Path archiveAbsolutePath = filesystem.resolve(archivePath);
     SourcePath archiveSourcePath =
-        new ExplicitBuildTargetSourcePath(rule.getBuildTarget(), archivePath);
+        ExplicitBuildTargetSourcePath.of(rule.getBuildTarget(), archivePath);
     Path memberPath = Paths.get("foo.class");
 
     ArchiveMemberSourcePath path = ArchiveMemberSourcePath.of(archiveSourcePath, memberPath);
@@ -516,7 +517,7 @@ public class SourcePathResolverTest {
     SourcePathResolver pathResolver =
         DefaultSourcePathResolver.from(new SourcePathRuleFinder(resolver));
     ProjectFilesystem filesystem = new FakeProjectFilesystem();
-    PathSourcePath pathSourcePath = new PathSourcePath(filesystem, filesystem.getPath("test"));
+    PathSourcePath pathSourcePath = FakeSourcePath.of(filesystem, "test");
 
     assertThat(
         pathResolver.getPathSourcePath(pathSourcePath),
@@ -524,7 +525,7 @@ public class SourcePathResolverTest {
 
     assertThat(
         pathResolver.getPathSourcePath(
-            new DefaultBuildTargetSourcePath(BuildTargetFactory.newInstance("//:rule"))),
+            DefaultBuildTargetSourcePath.of(BuildTargetFactory.newInstance("//:rule"))),
         Matchers.equalTo(Optional.empty()));
 
     assertThat(
@@ -534,7 +535,7 @@ public class SourcePathResolverTest {
     assertThat(
         pathResolver.getPathSourcePath(
             ArchiveMemberSourcePath.of(
-                new DefaultBuildTargetSourcePath(BuildTargetFactory.newInstance("//:rule")),
+                DefaultBuildTargetSourcePath.of(BuildTargetFactory.newInstance("//:rule")),
                 filesystem.getPath("something"))),
         Matchers.equalTo(Optional.empty()));
   }
@@ -562,7 +563,7 @@ public class SourcePathResolverTest {
 
     @Override
     public SourcePath getSourcePathToOutput() {
-      return new ExplicitBuildTargetSourcePath(getBuildTarget(), source);
+      return ExplicitBuildTargetSourcePath.of(getBuildTarget(), source);
     }
   }
 }
